--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello World
+<iframe src="http://docs.google.com/gview?url=untitled.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+
