--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<iframe src="http://docs.google.com/gview?url=untitled.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+<object data="untitled.pdf" type="application/pdf" width="100%" height="100%">
+
+  <p>It appears you don't have a PDF plugin for this browser.
+  No biggie... you can <a href="myfile.pdf">click here to
+  download the PDF file.</a></p>
+
+</object>
 
