--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="container-fluid vertical-center">
     <div class="row vertical-center">
             <div  class="col-sm-4 text-center" id ="cvSide">
-               <a href="berkaay.github.io/cv"> <img id="light" src="img/cv.png"> </a>
+               <a href="/cv"> <img id="light" src="img/cv.png"> </a>
             </div>
             <div class="col-sm-2 text-center" id ="profilSide">
                    <div class="col-md-12 text-center " id="name" ><i class="fa fa-male fa-2x fa-pull-left"> Berkay Öztürk </i></div>
@@ -104,7 +104,7 @@
 
             </div>
             <div class="col-sm-4 text-center" id ="gameSide" >
-              <a href="berkaay.github.io/Gravy">  <img id ="dark" src="img/game-controller-icon-png-10.png"> </a>
+              <a href="/Gravy">  <img id ="dark" src="img/game-controller-icon-png-10.png"> </a>
             </div>
 
     </div>
