--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     Bilkent University Undergraduate Student</br>
                     Junior @ Information Technology
                     I’m (trying2be) a Game Developer living in Ankara, Türkiye.
+                    bberkayozturk@gmail.com
                 </div>
 
                 <div class="col-md-12 text-center">
@@ -99,6 +100,7 @@
                         <li class="twitter"><a href="http://twitter.com/beeerkaay"><i class="fa fa-twitter fa-3x"></i></a></li>
                         <li class="pinterest"><a href="http://www.github.com/berkaay"><i class="fa fa-github fa-3x"></i></a></li>
                         <li class="behance"><a href="https://berkaay.itch.io"><i class="fa fa-gamepad fa-3x"></i></a></li>
+                        <li class="mail"><a href="mailto:bberkayozturk@gmail.com"><i class="fa fa-envelope fa-5x"></i></a></li>
                     </ul>
                 </div>
 
