apple like background

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <style>
 
     .container-fluid{
-        background-color: #1B1B1D;
+        background-image: url(img/background.jpg);
     }
     #light{
-        height:150px;
+        height:150px;`
         width: 150px;
     }
     #dark {
@@ -21,7 +21,8 @@
 
     }
     #name{
-        margin-left: 30px;
+       font-size: 44px;
+
     }
     .vertical-center {
         min-height: 100%;  /* Fallback for vh unit */
@@ -85,7 +86,8 @@
                <a href="/cv/untitled.pdf"> <img id="light" src="img/cv.png"> </a>
             </div>
             <div class="col-sm-2 text-center" id ="profilSide">
-                   <div class="col-md-12 text-center " id="name" ><i class="fa fa-male fa-2x fa-pull-left"> Berkay Öztürk </i></div>
+                    <div id ="name"> Berkay Ozturk </div>
+                   <!--<div class="col-md-12 text-center " id="name" ><i class="fa fa-male fa-2x fa-pull-left"> Berkay Öztürk </i></div>-->
                 <img src="img/profil.png" img-circle><br/>
                 <div class = "col-md-12" id="bullshitAboutMe">
                     Bilkent University Undergraduate Student</br>
